# nekt-sdk-py

./: README.md  main.py  pyproject.toml  pyrightconfig.json
nekt/: __init__.py  api.py  config.py  exceptions.py  my_script.py  types.py
nekt/engine/: __init__.py  base.py  python.py  spark.py
nekt/provider/: __init__.py  base.py  bigquery.py  delta.py  iceberg.py  parquet.py  spark_bigquery.py  spark_delta.py
nekt/sdk/: __init__.py  auth.py  transformation.py
nekt/sdk/service/: auth.py  cloud.py  secret.py  secrets.py  tables.py
nekt/services/: __init__.py  cloud.py  secrets.py  volumes.py
tests/: conftest.py  test_config.py  test_engine_selection.py  test_iceberg_engines.py  test_iceberg_integration.py  test_iceberg_provider.py  test_iceberg_read.py  test_iceberg_types.py  test_integration.py  test_module_wiring.py  test_smoke.py
