[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nekt-sdk"
version = "0.7.0"
description = "Nekt SDK for data lake operations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
    "tenacity>=8.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["nekt"]

[tool.ruff]
line-length = 160
target-version = "py311"

[tool.ruff.lint]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "D104",  # Missing docstring in public package
    "F401",  # Imported but unused; consider removing, adding to `__all__`, or using a redundant alias
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.9.0",
]
